--- a/configs/SparseRCNN/sparsercnn.res50.300pro.3x.yaml
+++ b/configs/SparseRCNN/sparsercnn.res50.300pro.3x.yaml
@@ -8,8 +8,8 @@ MODEL:
     NUM_PROPOSALS: 300
     NUM_CLASSES: 1
 DATASETS:
-  TRAIN: ("coco_2017_train",)
-  TEST:  ("coco_2017_val",)
+  TRAIN: ("balloon_train",)
+  TEST:  ("balloon_val",)
 SOLVER:
   STEPS: (210000, 250000)
   MAX_ITER: 270000
