--- a/configs/yolof/Base-YOLOF.yaml
+++ b/configs/yolof/Base-YOLOF.yaml
@@ -1,5 +1,7 @@
 MODEL:
   META_ARCHITECTURE: "YOLOF"
+  PIXEL_MEAN: [ 123.675, 116.280, 103.530 ]
+  PIXEL_STD: [ 58.395, 57.120, 57.375 ]
   BACKBONE:
     NAME: "build_resnet_backbone"
   RESNETS:
