--- a/configs/SparseRCNN/sparsercnn.res50.100pro.3x.yaml
+++ b/configs/SparseRCNN/sparsercnn.res50.100pro.3x.yaml
@@ -1,15 +1,16 @@
 _BASE_: "Base-SparseRCNN.yaml"
 MODEL:
-  WEIGHTS: "/home/changliu/PycharmProjects/paths/r50_100pro_3x_model.pth"
+  WEIGHTS: "detectron2://ImageNetPretrained/torchvision/R-50.pkl"
   RESNETS:
     DEPTH: 50
     STRIDE_IN_1X1: False
+#    RES2_OUT_CHANNELS: 64
   SparseRCNN:
     NUM_PROPOSALS: 100
     NUM_CLASSES: 1
 DATASETS:
-  TRAIN: ("balloon_train",)
-  TEST:  ("balloon_val",)
+  TRAIN: ("hci_train",)
+  TEST:  ("hci_val",)
 SOLVER:
   STEPS: (210000, 250000)
   MAX_ITER: 270000
